# rag-pipeline

./: pyproject.toml  requirements.txt
data/text_files/: sample.txt  sample2.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
